Cleaned up CommonRepository and CommonManager